# uzum-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/bot/: keyboards.py  middlewares.py  schemas.py  uzum_bot.py
app/config/: logging.py  settings.py
app/db/: base.py  client.py  models.py  schemas.py
app/extractor/: parser.py
app/migration/: env.py
app/migration/versions/: 0b68416a3754_add_last_checked_at_column_to_product_.py  2e7c0b4680e3_models_refact.py  7de7d7d83c76_number_and_sku_id_fields_added_to_.py  8cb04598c469_add_last_price_column_to_product_model.py  cd1b312aecb6_added_unique_user_product_.py  f06c6588eba0_timezone_added_to_datetime_fields.py  fc0a89131bdb_initial_revision.py
app/parser/: uzum.py
app/publisher/: publisher.py
app/scheduler/: jobs.py  scheduler.py
app/services/: product.py
app/workers/: product_add_worker.py
