[project]
name = "uzum-bot"
version = "0.1.0"
description = "Uzum marketplace prices tracking"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiohttp>=3.11.13",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.39",
    "asyncpg>=0.30.0",
    "alembic>=1.15.1",
    "greenlet>=3.1.1",
    "apscheduler>=3.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = """
(
    .venv
    | flake-report
    | venv
    | migrations
    | versions
    | tests
)
"""
