[project]
name = "uzum-bot"
version = "0.1.0"
description = "Uzum marketplace prices tracking"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiohttp>=3.13.3",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.39",
    "asyncpg>=0.30.0",
    "alembic>=1.15.1",
    "greenlet>=3.1.1",
    "apscheduler>=3.11.0",
    "seleniumbase>=4.35.7",
    "pytest-playwright>=0.7.2",
    "aio-pika>=9.6.1",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
    "wemake-python-styleguide>=0.19.2",
]

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = """
(
    .venv
    | venv
    | tests
)
"""

[tool.isort]
profile = "wemake"
default_section = "THIRDPARTY"
known_first_party = ["bot", "config", "db", "migration", "parser", "scheduler", "services"]
skip_glob = ["**/__pycache__", ".venv", "venv", "**/tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
line_length = 120

[tool.autoflake]
imports = ["sqlalchemy", "aiogram", "apscheduler"]

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
force-exclude = true

extend-exclude = [
    ".venv/",
    "tests",
    "docker",
    "**/migration/*",
    "__pycache",
    ".pre-commit-config.yaml",
    ".env.example",
    "*.yml",
    ".gitignore",
    ".dockerignore",
    "uv.lock",
    "alembic.ini",
    "Makefile",
    "LICENSE",
    "README.md",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "F",        # pyflakes
    "E", "W",   # pycodestyle
    "C90",      # mccabe
    "ERA",      # eradicate
    "N",        # pep8-naming
    "B",        # flake8-bugbear
    "T20",      # flake8-print
    "RET",      # flake8-return
    "TCH",      # flake8-type-checking
]

fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN",
    "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN",
    "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET",
    "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]

# disable autofix for some possibly-unsafe rules
unfixable = ["B", "SIM", "TRY", "RUF"]
